--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "script.js",
   "type": "module",
   "scripts": {
-    "start": "node app.js",       // For production (used by Vercel)
-    "dev": "nodemon app.js",     // For local development
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
