--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,6 @@
       { "src": "app.js", "use": "@vercel/node" }
     ],
     "routes": [
-      { "src": "/(.*)", "dest": "/" }
+      { "src": "/(.*)", "dest": "/app.js" }
     ]
   }
-  
